--- a/app/src/main/res/layout/show_cal_activity.xml
+++ b/app/src/main/res/layout/show_cal_activity.xml
@@ -76,6 +76,10 @@
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="8dp"
                 android:background="@drawable/round_button_lightyellow"
+                android:focusedMonthDateColor="@color/darkBrown"
+                android:outlineAmbientShadowColor="@color/darkBrown"
+                android:outlineSpotShadowColor="@color/darkBrown"
+                android:selectedWeekBackgroundColor="@color/darkBrown"
                 app:layout_constraintBottom_toTopOf="@+id/day_show"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -90,6 +94,7 @@
                 android:background="@drawable/round_button_lightyellow"
                 android:padding="4dp"
                 android:text="선택한 날 먹은 음식 보기"
+                android:textColor="@color/darkBrown"
                 app:layout_constraintBottom_toTopOf="@+id/month_list"
                 app:layout_constraintEnd_toEndOf="@+id/month_list"
                 app:layout_constraintStart_toStartOf="@+id/month_list"
@@ -105,6 +110,7 @@
                 android:background="@drawable/round_button_lightyellow"
                 android:padding="4dp"
                 android:text="선택한 날짜의 월 전체 보기"
+                android:textColor="@color/darkBrown"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
